# lego-budget

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
lego_budget/: __init__.py  run_stats.py
lego_budget/utils/: __init__.py  analyzer.py  sheets.py  tables.py
tests/: test_analyzer.py
