[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lego-budget"
version = "0.1.0"
description = "A tool to analyze LEGO set purchases and track building progress"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "gspread>=5.12.0",
    "pre-commit==4.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
# Inherit from ruff.toml 